--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -7,13 +7,14 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
+	overflow: hidden;
 	background-color: #36384dbb;
 	z-index: 3;
 
 	form {
-		max-width: 504px;
 		padding: 4.8em 6.4em;
+		max-width: 504px;
 		background-color: #fff;
 		border-radius: 32px;
 	}
